@@ -398,7 +398,7 @@ void GrSkSLFP::onAddToKey(const GrShaderCaps& caps, skgpu::KeyBuilder* b) const 
         bool specialize = specialized[i] == Specialized::kYes;
         b->addBool(specialize, "specialize");
         if (specialize) {
-            b->addBytes(iter->sizeInBytes(), uniformData + iter->offset, iter->name.c_str());
+            b->addBytes(iter->sizeInBytes(), uniformData + iter->offset, iter->name);
         }
     }
 }
