@@ -304,7 +304,9 @@ private:
                           uniform_iterator uEnd,
                           child_iterator cIter,
                           child_iterator cEnd) {
-        SkASSERTF(uIter == uEnd, "Expected more uniforms, starting with '%s'", uIter->name.c_str());
+        SkASSERTF(uIter == uEnd,
+                  "Expected more uniforms, starting with '%.*s'",
+                  (int)uIter->name.size(), uIter->name.data());
         SkASSERTF(cIter == cEnd, "Expected more children, starting with '%s'", cIter->name.c_str());
     }
     static void checkOneChild(child_iterator cIter, child_iterator cEnd, const char* name) {
@@ -373,9 +375,9 @@ private:
                                 const T* /*val*/,
                                 size_t valSize) {
         SkASSERTF(uIter != uEnd, "Too many uniforms, wasn't expecting '%s'", name);
-        SkASSERTF(uIter->name.equals(name),
-                  "Expected uniform '%s', got '%s' instead",
-                  uIter->name.c_str(), name);
+        SkASSERTF(uIter->name == name,
+                  "Expected uniform '%.*s', got '%s' instead",
+                  (int)uIter->name.size(), uIter->name.data(), name);
         SkASSERTF(uIter->sizeInBytes() == valSize,
                   "Expected uniform '%s' to be %zu bytes, got %zu instead",
                   name, uIter->sizeInBytes(), valSize);
