@@ -9,6 +9,9 @@ Milestone 104
   * SkRasterHandleAllocator::MakeCanvas now takes optional SkSurfaceProps.
   * SkImage::MakeFromPicture and SkImageGenerator::MakeFromPicture now take an optional
     SkSurfaceProps to use when rasterizing the picture.
+  * SkRuntimeEffect::Uniform now stores the uniform name as a string_view, rather than a
+    SkString. Related methods SkRuntimeEffect::findUniform and SkRuntimeEffectBuilder::uniform
+    also take std::string_view instead of const char*.
   * skcms.h has been relocated to //modules/skcms/skcms.h (was //include/third_party/skcms/skcms.h)
   * New functions SkCanvas::getBaseProps and SkCanvas::getTopProps; SkCanvas::getBaseProps is a
     direct replacement for the (now deprecated) SkCanvas::getProps function, while getTopProps is
